# vld

./: .gitignore  CMakeLists.txt  README.md  copybuild.bat  update_version.ps1  vld.sln  vldConfig.cmake.in  vld_vs14.sln
.github/workflows/: dev_test.yml  msbuild.yml
lib/cppformat/: format.vcxproj
lib/gtest/msvc/: gtest.vcxproj
setup/: VLDConfig.cmake  build_version.bat  version.h  vld-setup.iss
setup/dbghelp/x64/: Microsoft.DTfW.DHL.manifest
setup/dbghelp/x86/: Microsoft.DTfW.DHL.manifest
src/: callstack.cpp  callstack.h  criticalsection.h  crtmfcpatch.h  cs.h  loaderlock.h  set.h  stdafx.h  tree.h  utility.cpp  vld.cpp  vld.dll.dependency.x64.manifest  vld.dll.dependency.x86.manifest  vld.vcxproj  vld.vcxproj.filters  vld_dbghelp.h  vld_hooks.cpp  vldheap.cpp  vldheap.h  vldint.h
src/tests/mfc/: vldmfc.vcxproj
tests/: copydlls.bat  vld_test.props
tests/basics/: Allocs.cpp  basics.cpp  basics.vcxproj  basics_disabled.cpp
tests/corruption/: corruption.vcxproj  test.cpp
tests/ignore_functions/: ignore_functions.vcxproj  test.cpp
tests/ms_static_string/: Allocs.cpp  basics.cpp  basics_disabled.cpp  corruption.cpp  ignore_functions.cpp  ms_static_string.cpp  ms_static_string.vcxproj  ms_static_string.vcxproj.filters  vld_main.cpp
tests/static_string/: static_string.vcxproj  test.cpp
tests/threads/: test.cpp  threads.cpp  threads.vcxproj
tests/vld_,ain/: vld_,ain.cpp  vld_,ain.vcxproj  vld_,ain.vcxproj.filters
tests/vld_dll1/: dllmain.cpp  vld_dll1.vcxproj
tests/vld_dll2/: dllmain.cpp  pch.h  vld_dll2.vcxproj
tests/vld_heapcorruption/: vld_heapcorruption.cpp  vld_heapcorruption.vcxproj  vld_heapcorruption.vcxproj.filters
tests/vld_main/: vld_main.cpp  vld_main.vcxproj  vld_main.vcxproj.filters
tests/vld_main_test/: test.cpp  vld_main_test.vcxproj
tests/vld_sdl/: vld_sdl.cpp  vld_sdl.vcxproj  vld_sdl.vcxproj.filters
tests/vld_tests/: Allocs.cpp  basics.cpp  basics_disabled.cpp  corruption.cpp  extras.cpp  ignore_functions.cpp  static_string.cpp  vld_main.cpp  vld_tests.vcxproj  vld_tests.vcxproj.filters
tests/vld_unload/: test.cpp  vld_unload.cpp  vld_unload.vcxproj  vld_unload.vcxproj.filters
